# proofs-of-data

./: LICENSE  Makefile  README.md  Setup.hs  proofs-of-data.cabal  stack.yaml
src/: Bug1.hs  Bug2.hs  Bug3.hs  Multiset.hs  PleBug1.hs  Positive.hs  PriQueue.hs  ProofCombinators.hs  RedBlack.hs  RedBlackAbs.hs  SearchTree.hs  Selection.hs  Trie.hs
src/Binom/: Binom.hs  Binom2.hs  Binom4.hs  Binom5.hs  Lists.hs  binom3.hs
