name:                     proofs-of-data
version:                  0.0.0.1
synopsis:                 Port of Andrew Appel's VFA to LiquidHaskell
description:              Please see the README on github for more
                          <https://github.com/ucsd-progsys/proofs-of-data> 
homepage:                 https://github.com/ucsd-progsys/proofs-of-data#readme
bug-reports:              https://github.com/ucsd-progsys/proofs-of-data/issues
license:                  MIT
license-file:             LICENSE
author:                   Ranjit Jhala
maintainer:               Ranjit Jhala <jhala@cs.ucsd.edu>
copyright:                2019 Ranjit Jhala 
category:                 Development
cabal-version:            >=1.10
build-type:               Custom

library
  exposed-modules:         ProofCombinators, 
                           Lists, 
                           Perm,
                           Sort,
                           Selection,
                           TotalMaps,
                           SearchTree,
                           Positive,
                           Trie,
                           RedBlack

  build-depends:           base >=4.8 && <5,
                           containers
                           
  hs-source-dirs:          src
  default-language:        Haskell2010
  default-extensions:      TupleSections
  ghc-options:             -rtsopts
                           -with-rtsopts=-N
                           -Wall

source-repository head
  type:                git
  location:            https://github.com/ucsd-progsys/proofs-of-data

